Lot of important things done

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,5 +6,8 @@
 @import 'base/typography';
 
 @import 'modules/links';
+@import 'modules/cards';
 
 @import 'layouts/navbar';
+
+@import 'pages/items-index';
