--- a/app/assets/stylesheets/layouts/_navbar.scss
+++ b/app/assets/stylesheets/layouts/_navbar.scss
@@ -2,10 +2,22 @@
   background-color: $secondary;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 1rem;
 
   &__brand {
-    font-size: 2rem;
-    color: #fff;
+    display: flex;
+    align-items: center;
+
+    .logo {
+      height: 3rem;
+      width: 3rem;
+      margin-right: 1rem;
+    }
+
+    .title {
+      font-size: 2rem;
+      color: #fff;
+    }
   }
 }
