--- a/app/views/items/_item_card.html.erb
+++ b/app/views/items/_item_card.html.erb
@@ -1,5 +1,10 @@
-<div class='card'>
-  <div class='card__header'>
-    <h3 class='card__title'><%= item.title %>
+<div class='index-card'>
+  <div class='index-card__illustration'>
+    <img src=<%= item.image_url %> alt='image'>
+  </div>
+  <div class='index-card__body'>
+    <h3 class='title'><%= item.title %>
+    <p class='price'><%= "#{item.price.to_s.ljust(5, '0')} €" %></p>
+    <%= link_to 'En savoir plus', '#', class: 'btn' %>
   </div>
 </div>
