--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,8 @@
 <nav class='navbar'>
-  <%= link_to '😽 Poticha', root_path, class: 'navbar__brand' %>
+  <div class='navbar__brand'>
+    <div class='logo'></div>
+    <%= link_to 'Poticha', root_path, class: 'title' %>
+  </div>
   <div class='navbar__items'>
     <%= link_to 'Mon Compte', '#', class: 'item' %>
     <%= link_to 'Mon Panier', '#', class: 'item' %>
