--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,6 +7,8 @@
 
 @import 'modules/links';
 @import 'modules/cards';
+@import 'modules/forms';
+@import 'modules/buttons';
 
 @import 'layouts/navbar';
 
