--- a/app/assets/stylesheets/modules/_cards.scss
+++ b/app/assets/stylesheets/modules/_cards.scss
@@ -20,3 +20,23 @@
     }
   }
 }
+
+.show-card {
+  display: flex;
+  justify-content: center;
+
+  &__body {
+    margin: 1em;
+
+    & .grey {
+      color: $grey;
+      padding: 1rem 0;
+      border-bottom: 1px solid $lightgrey;
+    }
+
+    &--description {
+      margin: 1rem 0;
+      max-width: 20rem;
+    }
+  }
+}
