--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -4,7 +4,13 @@
     <%= link_to 'Poticha', root_path, class: 'title' %>
   </div>
   <div class='navbar__items'>
-    <%= link_to 'Mon Compte', '#', class: 'item' %>
-    <%= link_to 'Mon Panier', '#', class: 'item' %>
+    <% if user_signed_in? %>
+      <%= link_to 'Mon Compte', user_path(current_user), class: 'item' %>
+      <%= link_to 'Mon Panier', '#', class: 'item' %>
+      <%= link_to 'Me déconnecter', destroy_user_session_path, method: :delete, class: 'item' %>
+    <% else %>
+      <%= link_to 'Me connecter', new_user_session_path, class: 'item' %>
+      <%= link_to "M'identifier", new_user_registration_path, class: 'item' %>
+    <% end %>
   </div>
 </nav>
