--- a/app/views/items/_item_card_show.html.erb
+++ b/app/views/items/_item_card_show.html.erb
@@ -6,5 +6,6 @@
     <h2><%= item.title %></h2>
     <p class="grey"><%= item.price %>€</p>
     <p class=show-card__body--description><%= item.description %></p>
+    <div class="mt-1"><%= link_to "Ajouter au panier", "#", class: "btn" %></div>
   </div>
 </div>
