--- a/app/views/user_mailer/order_validation_email.text.erb
+++ b/app/views/user_mailer/order_validation_email.text.erb
@@ -6,7 +6,7 @@ Bonjour,
 Nous avons le plaisir de confirmer votre commande d'un montant total de : <%= @order.total_price %>€.
 
 Voici le détail de votre commande :
-<% @order.join_table_item_order.each do |order_items| %>
+<% @order.join_table_item_orders.each do |order_items| %>
   <%= order_items.item.quantity %> x "<%= order_items.item.title %>" (<%= order_items.item.price %>€)
 <% end %>
 
