--- a/app/views/carts/_cart_item.html.erb
+++ b/app/views/carts/_cart_item.html.erb
@@ -1,3 +1,4 @@
-<p><%= item.title %></p>
-<p><%= item.price %></p>
-<p><%= JoinTableItemCart.find_by(item: item, cart: cart).quantity %></p>
+<p> Insérer miniature ici </p>
+<p>Nom : <%= item.title %></p>
+<p>Prix : <%= item.price %>€</p>
+<p>Quantité : <%= JoinTableItemCart.find_by(item: item, cart: cart).quantity %></p>
