--- a/app/views/carts/_cart_item.html.erb
+++ b/app/views/carts/_cart_item.html.erb
@@ -1,4 +1,18 @@
-<p> Insérer miniature ici </p>
-<p>Nom : <%= item.title %></p>
-<p>Prix : <%= item.price %>€</p>
-<p>Quantité : <%= JoinTableItemCart.find_by(item: item, cart: cart).quantity %></p>
+<% if cart.items.length >0 %>
+
+  <% cart.items.each do |item| %>
+    <div class="cart-item">
+      <div class="cart-item__picture">
+        <img src=<%= item.image_url %> alt='image'>
+      </div>
+      <div class="cart-item__content">
+        <p class="cart-item__content--title"><%= item.title %></p>
+        <p><%= item.price %>€</p>
+        <p><span class="cart-item__content--quantity">Quantité :</span> <%= JoinTableItemCart.find_by(item: item, cart: cart).quantity %></p>
+      </div>
+    </div>
+  <% end %>
+
+<% else %>
+  <p> Le panier est vide. 😿 </p>
+<% end %>
