--- a/app/views/items/_item_card.html.erb
+++ b/app/views/items/_item_card.html.erb
@@ -5,6 +5,7 @@
   <div class='index-card__body'>
     <h3 class='title'><%= item.title %>
     <p class='price'><%= "#{item.price.to_s.ljust(5, '0')} €" %></p>
-    <%= link_to 'En savoir plus', item_path(item.id) , class: 'btn' %>
+    <div class="mt-1"><%= link_to 'En savoir plus', item_path(item.id) , class: 'btn' %></div>
+    <div class="mt-1"><%= link_to 'Ajouter au panier', join_table_item_carts_path(id: item.id), class: 'btn' %></div>
   </div>
 </div>
