--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,8 @@
     <title>TheKittingProject</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta charset='UTF-8'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1">
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
@@ -13,66 +15,6 @@
     <%= render 'layouts/navbar' %>
     <%= yield %>
 
-    <script>
-      const coolCatsReactions = [
-        'blank',
-        'cool',
-        'cupcake',
-        'deepsea',
-        'dizzy',
-        'dizzy2',
-        'doubleface',
-        'dragon',
-        'fancy',
-        'firecrown',
-        'firehalo',
-        'froggy',
-        'glossy',
-        'handsome',
-        'hearmeout',
-        'hobbes',
-        'kewlcet',
-        'kiss',
-        'knight',
-        'lol',
-        'love',
-        'metamask',
-        'navy',
-        'nosignal',
-        'ohno',
-        'pirate',
-        'prince',
-        'ramcowboy',
-        'sleep',
-        'smiley',
-        'smirk',
-        'smirk2',
-        'sob',
-        'squad',
-        'sushi',
-        'sweat_smile',
-        'tongue',
-        'uuh',
-        'what',
-        'wink'
-      ]
-
-      function chooseRandomLogo() {
-        const imgId = Math.floor(Math.random() * coolCatsReactions.length)
-        const img = coolCatsReactions[imgId]
-
-        const logoDiv = document.querySelector('.navbar__brand .logo');
-
-        logoDiv.setAttribute(
-          'style',
-          `background-image: url(https://www.coolcatsnft.com/assets/images/e_${img}.png);
-          background-position: 50% 50%;
-          background-size: cover;
-          transform: scaleX(-1);
-        `)
-      }
-    
-      chooseRandomLogo();
-    </script>
+    <%= javascript_include_tag 'logo' %>
   </body>
 </html>
