--- a/app/views/carts/_cart_item.html.erb
+++ b/app/views/carts/_cart_item.html.erb
@@ -1,18 +1,25 @@
-<% if cart.items.length >0 %>
+<div class="cart-items-wrapper">
+  <% if cart.items.length >0 %>
 
-  <% cart.items.each do |item| %>
-    <div class="cart-item">
-      <div class="cart-item__picture">
-        <img src=<%= item.image_url %> alt='image'>
+    <% cart.items.each do |item| %>
+      <div class="cart-item">
+        <div class="cart-item__picture">
+          <img src=<%= item.image_url %> alt='image'>
+        </div>
+        <div class="cart-item__content">
+          <p class="cart-item__content--title"><%= item.title %></p>
+          <p><%= item.price %>€</p>
+          <p><span class="cart-item__content--quantity">Quantité :</span> <%= JoinTableItemCart.find_by(item: item, cart: cart).quantity %></p>
+        </div>
       </div>
-      <div class="cart-item__content">
-        <p class="cart-item__content--title"><%= item.title %></p>
-        <p><%= item.price %>€</p>
-        <p><span class="cart-item__content--quantity">Quantité :</span> <%= JoinTableItemCart.find_by(item: item, cart: cart).quantity %></p>
-      </div>
-    </div>
+    <% end %>
+
+  <% else %>
+    <p> Le panier est vide. 😿 </p>
   <% end %>
+</div>
 
-<% else %>
-  <p> Le panier est vide. 😿 </p>
-<% end %>
+<div class="cart-total-wrapper">
+  <p class="cart-total-wrapper__amount"> Total : <%= @total_amount %>€</p>
+  <%= link_to "Payer (ajoute stripe ici bg)", "#", class:"btn" %>
+</div>
