Ajout fonction suppression d'objet du panier, ne s'affiche que si l'objet est en un seul exemplaire

--- a/app/views/carts/_cart_item.html.erb
+++ b/app/views/carts/_cart_item.html.erb
@@ -10,6 +10,16 @@
           <p class="cart-item__content--title"><%= item.title %></p>
           <p><%= item.price %>€</p>
           <p><span class="cart-item__content--quantity">Quantité :</span> <%= JoinTableItemCart.find_by(item: item, cart: cart).quantity %></p>
+
+          <%# Fonction d'ajout ou retrait de quantité : Moins de 1 = Supprimer l'article %>
+          <% if (JoinTableItemCart.find_by(item: item, cart: cart).quantity - 1 <= 0) %>
+           <%= link_to "Supprimer", join_table_item_cart_path(item.id), method: "delete", class:"btn danger-btn" %>
+            <p> + </p>
+          <% else %>
+            <%# Insérer ici fonction d'incrément de quantité %>
+            <p> - / + </p>
+          <% end %>
+
         </div>
       </div>
     <% end %>
