--- a/app/assets/stylesheets/modules/_buttons.scss
+++ b/app/assets/stylesheets/modules/_buttons.scss
@@ -17,3 +17,10 @@
     opacity: 0.7;
   }
 }
+
+.danger-btn {
+  font-size: 0.7em;
+  padding: 0.2rem;
+  text-align: center;
+  background-color: $danger;
+}
