--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,6 @@
     <%= render 'layouts/navbar' %>
     <%= yield %>
 
-    <%= javascript_include_tag 'logo' %>
+    <%= javascript_include_tag 'navbar' %>
   </body>
 </html>
