--- a/app/assets/stylesheets/layouts/_navbar.scss
+++ b/app/assets/stylesheets/layouts/_navbar.scss
@@ -1,3 +1,7 @@
+body {
+  padding-top: 5rem;
+}
+
 .navbar {
   background-color: $secondary;
   display: flex;
@@ -6,6 +10,8 @@
   padding: 1rem;
   z-index: 99;
   width: 100%;
+  position: fixed;
+  top: 0;
 
   &__brand {
     display: flex;
@@ -80,11 +86,7 @@
         display: none;
       }
     }
-  }
-}
 
-@media screen and (max-width: 525px) {
-  .navbar {
     &__items {
       display: none;
     }
@@ -121,10 +123,6 @@
       &.is-active {
         transform: rotate(90deg);
       }
-    }
-
-    &.mobile-menu-active {
-      position: fixed;
     }
   }
 
