--- a/app/views/items/_item_card.html.erb
+++ b/app/views/items/_item_card.html.erb
@@ -3,16 +3,16 @@
     <img src=<%= item.image_url %> alt='image'>
   </div>
   <div class='index-card__body'>
-    <h3 class='title'><%= item.title %>
-    <p class='price'><%= "#{item.price.to_s.ljust(5, '0')} €" %></p>
-    <div class="mt-1"><%= link_to 'En savoir plus', item_path(item.id) , class: 'btn' %></div>
-    <div class="mt-1">
-      <%= render(
-            partial: "carts/add_to_cart_btn",
-            locals: {item: item}
-            ) 
-      %>
+    <div class='index-card__info'>
+      <h3 class='title'><%= item.title %></h3>
+      <p class='price'><%= "#{item.price.to_s.ljust(5, '0')} €" %></p>
     </div>
-
+    <div class='index-card__actions'>
+      <%= link_to 'En savoir plus', item_path(item.id) , class: 'btn' %>
+      <%= render(
+        partial: "carts/add_to_cart_btn",
+        locals: {item: item}
+      ) %>
+    </div>
   </div>
 </div>
