index responsive improvements

--- a/app/assets/stylesheets/modules/_cards.scss
+++ b/app/assets/stylesheets/modules/_cards.scss
@@ -3,6 +3,7 @@
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
+  width: 90%;
 
   &__illustration {
     width: 15rem;
