--- a/app/assets/stylesheets/pages/_items-index.scss
+++ b/app/assets/stylesheets/pages/_items-index.scss
@@ -21,7 +21,6 @@
 
   .items {
     width: 80%;
-    max-width: 700px;
     margin: 5rem 0;
 
     .index-card {
@@ -39,6 +38,7 @@
     .index-card:nth-child(2n) {
       flex-direction: row;
       text-align: right;
+      margin-left: auto;
 
       .btn {
         margin-left: auto;
@@ -47,6 +47,26 @@
     
     .index-card:nth-child(2n + 1) {
       flex-direction: row-reverse;
+    }
+  }
+}
+
+@media screen and (max-width: 812px) {
+  .items-index-container {
+    .index-card__actions p {
+      width: 70%;
+    }
+  }
+}
+
+@media screen and (max-width: 812px) {
+  .items-index-container {
+    .index-card {
+      width: 100%;
+
+      &__actions p {
+        width: auto;
+      }
     }
   }
 }
