--- a/app/views/carts/_cart_item.html.erb
+++ b/app/views/carts/_cart_item.html.erb
@@ -32,4 +32,5 @@
 <div class="cart-total-wrapper">
   <p class="cart-total-wrapper__amount"> Total : <%= @total_amount %>€</p>
   <%= link_to "Payer (ajoute stripe ici bg)", "#", class:"btn" %>
+  <%= link_to "Créer Commande", orders_path, :method => :post, class:"btn" %>
 </div>
