--- a/app/views/orders/create.html.erb
+++ b/app/views/orders/create.html.erb
@@ -1,2 +1,2 @@
-<h1>Orders#create</h1>
-<p>Find me in app/views/orders/create.html.erb</p>
+<h1>Votre commande a bien été crée</h1>
+<p>Merci et bonne journée.</p>
