--- a/app/views/user_mailer/order_validation_email.html.erb
+++ b/app/views/user_mailer/order_validation_email.html.erb
@@ -8,7 +8,7 @@
     <h3>Bonjour, nous avons le plaisir de confirmer votre commande d'un montant total de : <%= @order.total_price %>€</h3>
     <h6>Voici le détail de votre commande :</h6>
     <% @order.join_table_item_orders.each do |order_items| %>
-      <p><%= order_items.item.quantity %> x "<%= order_items.item.title %>" (<%= order_items.item.price %>€)</p>
+      <p><%= order_items.quantity %> x "<%= order_items.item.title %>" (<%= order_items.item.price %>€)</p>
     <% end %>
     <p>A bientôt sur Poticha.</p>
   </body>
