Ajout bouton retour du show à l'index d'un item

--- a/app/views/items/_item_card_show.html.erb
+++ b/app/views/items/_item_card_show.html.erb
@@ -1,3 +1,6 @@
+<div class="show-card__menu">
+  <%= link_to "Retour", items_path %>
+</div>
 <div class='show-card'>
   <div class='index-card__illustration show-card__illustration'>
     <img src=<%= item.image_url %> alt='image'>
