--- a/app/assets/stylesheets/pages/_items-show.scss
+++ b/app/assets/stylesheets/pages/_items-show.scss
@@ -2,6 +2,10 @@
   margin: 1em;
 }
 
+.show-card__menu a{
+  color: $gni;
+}
+
 // A déplacer - voir avec Boris où le mettre ( _variables ? )
 .mt-1 {
   margin-top: 1em;
