--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,2 +1,6 @@
-<h1>Orders#show</h1>
-<p>Find me in app/views/orders/show.html.erb</p>
+<h1>Commande n°<%=@order.id%></h1>
+<p>Détail de la commande :</p>
+<% @order.items.each do |item| %>
+  <div> </p> <%= link_to "#{item.title}", item_path(item) %> x  <%=item.join_table_item_orders.find_by(order_id: @order.id).quantity%> <%=item.price%> €</div>
+<% end %>
+<p>Prix total : <%=@order.total_price%> €</p>
