--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,5 +28,10 @@
   </div>
   <div class='previous-orders'>
     <h2>Mes précédentes commandes</h2>
+    
+    <% @user.orders.each do |order| %>
+    <div> <%= link_to "Commande n°#{order.id}", order_path(order) %></div>
+    <% end %>
+    
   </div>
 </div>
