--- a/app/assets/stylesheets/layouts/_navbar.scss
+++ b/app/assets/stylesheets/layouts/_navbar.scss
@@ -99,6 +99,7 @@ body {
       top: 1rem;
       transform-origin: 50% 50%;
       transform: rotate(0);
+      cursor: pointer;
       transition: all .4s ease;
 
       g {
