--- a/app/assets/stylesheets/modules/_cards.scss
+++ b/app/assets/stylesheets/modules/_cards.scss
@@ -2,13 +2,13 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  flex-wrap: wrap;
   width: 90%;
 
   &__illustration {
     width: 15rem;
     overflow: hidden;
     border-radius: 4rem;
+    margin: 0 1rem;
 
     img {
       height: 100%;
