--- a/app/assets/stylesheets/pages/_items-index.scss
+++ b/app/assets/stylesheets/pages/_items-index.scss
@@ -5,12 +5,14 @@
 
   .herobar {
     background-image: url(https://i.pinimg.com/originals/07/89/d5/0789d5fa211be6fbb54747727944b351.jpg);
-    height: 15rem;
-    width: 100%;
+    height: 20rem;
+    width: 95%;
     background-size: cover;
     background-position: 50% 50%;
     display: grid;
     place-content: center;
+    margin: 2rem auto;
+    border-radius: 2rem;
 
     h1 {
       color: #fff;
@@ -24,8 +26,13 @@
     margin: 5rem 0;
 
     .index-card {
-      margin: 2rem 0;
+      margin-top: 2rem;
+      margin-bottom: 2rem;
       font-size: 1.2rem;
+      padding: 3em;
+      border-radius: 3rem;
+      transform: translateX(0);
+      transition: all .6s ease-in-out;
 
       &__actions {
         .btn {
@@ -33,8 +40,24 @@
           width: fit-content;
         }
       }
+
+      &:hover {
+        transform: translateX(-2%);
+      }
     }
 
+    .index-card:nth-child(2n) {
+      background-color: $light-primary;
+    }
+
+    .index-card:nth-child(2n + 1) {
+      background-color: $light-secondary;
+    }
+  }
+}
+
+@media screen and (min-width: 751px) {
+  .items-index-container .items {
     .index-card:nth-child(2n) {
       flex-direction: row;
       text-align: right;
@@ -43,30 +66,14 @@
       .btn {
         margin-left: auto;
       }
+
+      &:hover {
+        transform: translateX(2%);
+      }
     }
     
     .index-card:nth-child(2n + 1) {
       flex-direction: row-reverse;
-    }
-  }
-}
-
-@media screen and (max-width: 812px) {
-  .items-index-container {
-    .index-card__actions p {
-      width: 70%;
-    }
-  }
-}
-
-@media screen and (max-width: 812px) {
-  .items-index-container {
-    .index-card {
-      width: 100%;
-
-      &__actions p {
-        width: auto;
-      }
     }
   }
 }
@@ -79,7 +86,10 @@
       }
     }
     .index-card {
+      flex-wrap: wrap;
       justify-content: center;
+      margin: 2rem auto;
+
       &__illustration {
         img {
           width: 100%;
@@ -94,9 +104,15 @@
       }
 
       &__actions {
+        width: 100%;
         text-align: center;
+
         .btn {
           margin: 1rem auto;
+        }
+
+        p {
+          width: auto;
         }
       }
     }
