--- a/app/views/items/_item_card.html.erb
+++ b/app/views/items/_item_card.html.erb
@@ -5,7 +5,7 @@
   <div class='index-card__body'>
     <div class='index-card__info'>
       <h3 class='title'><%= item.title %></h3>
-      <p class='price'><%= "#{item.price.to_s.ljust(5, '0')} €" %></p>
+      <p class='price'><%= "#{item.price} €" %></p>
     </div>
     <div class='index-card__actions'>
       <%= link_to 'En savoir plus', item_path(item.id) , class: 'btn' %>
