--- a/app/views/carts/_cart_item.html.erb
+++ b/app/views/carts/_cart_item.html.erb
@@ -15,12 +15,14 @@
           <% if (JoinTableItemCart.find_by(item: item, cart: cart).quantity - 1 <= 0) %>
             <div class="cart-item__content--options">
               <%= link_to "Supprimer", join_table_item_cart_path(item.id), method: "delete", class:"btn danger-btn" %>
-              <%= link_to "+", join_table_item_cart_path(id: item.id, increment: 1), method: "patch",class:"add_quantity" %>
+              <%= link_to "+", join_table_item_cart_path(id: item.id, increment: 1), method: "patch",class:"change_quantity" %>
             </div>
           <% else %>
             <%# Insérer ici fonction d'incrément de quantité %>
-            <%= link_to "-", join_table_item_cart_path(id: item.id, increment: -1), method: "patch",class:"add_quantity" %>
-            <%= link_to "+", join_table_item_cart_path(id: item.id, increment: 1), method: "patch",class:"add_quantity" %>
+            <div class="cart-item__content--options">
+              <%= link_to "-", join_table_item_cart_path(id: item.id, increment: -1), method: "patch",class:"change_quantity" %>
+              <%= link_to "+", join_table_item_cart_path(id: item.id, increment: 1), method: "patch",class:"change_quantity" %>
+            </div>
           <% end %>
 
         </div>
