--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,5 +16,6 @@
     <%= yield %>
 
     <%= javascript_include_tag 'navbar' %>
+    <script src="https://js.stripe.com/v3/"></script>
   </body>
 </html>
