--- a/app/views/carts/_cart_item.html.erb
+++ b/app/views/carts/_cart_item.html.erb
@@ -31,6 +31,10 @@
 
 <div class="cart-total-wrapper">
   <p class="cart-total-wrapper__amount"> Total : <%= @total_amount %>€</p>
-  <%= link_to "Payer (ajoute stripe ici bg)", "#", class:"btn" %>
+  <%= link_to "Payer (la moulah)",
+    checkout_create_path(total: @total_amount),
+    class:"btn",
+    remote: true,
+    method: :post %>
   <%= link_to "Créer Commande", orders_path, :method => :post, class:"btn" %>
 </div>
