--- a/app/assets/stylesheets/modules/_cards.scss
+++ b/app/assets/stylesheets/modules/_cards.scss
@@ -3,6 +3,7 @@
   align-items: center;
   justify-content: space-between;
   width: 90%;
+  flex-shrink: 0;
 
   &__illustration {
     width: 15rem;
