image size issue fixed

--- a/app/assets/stylesheets/modules/_cards.scss
+++ b/app/assets/stylesheets/modules/_cards.scss
@@ -8,10 +8,11 @@
     max-width: 15rem;
     height: auto;
     overflow: hidden;
-    border-radius: 4rem;
     margin: 0 1rem;
+    border-radius: 4rem;
 
     img {
+      object-fit: cover;
       height: 100%;
       width: auto;
       transform: scale(1);
@@ -27,6 +28,7 @@
 .show-card {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 
   &__body {
     margin: 1em;
