--- a/app/assets/stylesheets/modules/_cards.scss
+++ b/app/assets/stylesheets/modules/_cards.scss
@@ -7,6 +7,7 @@
   &__illustration {
     max-width: 15rem;
     height: auto;
+    max-height: 15rem;
     overflow: hidden;
     margin: 0 1rem;
     border-radius: 4rem;
