--- a/app/views/user_mailer/new_order_email.text.erb
+++ b/app/views/user_mailer/new_order_email.text.erb
@@ -5,4 +5,10 @@ Bonjour admin,
 
 <%= @user.email %> vient de passer une nouvelle commande pour un montant total de : <%= @order.total_price %>€
 
+Voici le détail de votre commande :
+
+<% @order.items.each do |item| %>
+  <%= link_to "#{item.title}", item_path(item) %> (<%=item.price%> €) x<%=item.join_table_item_orders.find_by(order_id: @order.id).quantity%>
+<% end %>
+
 Oh yeah !
