--- a/app/views/user_mailer/order_validation_email.html.erb
+++ b/app/views/user_mailer/order_validation_email.html.erb
@@ -7,8 +7,14 @@
     <h1>Confirmation de votre commande</h1>
     <h3>Bonjour, nous avons le plaisir de confirmer votre commande d'un montant total de : <%= @order.total_price %>€</h3>
     <h6>Voici le détail de votre commande :</h6>
-    <% @order.join_table_item_orders.each do |order_items| %>
-      <p><%= order_items.quantity %> x "<%= order_items.item.title %>" (<%= order_items.item.price %>€)</p>
+    <% @order.items.each do |item| %>
+      </p><%= link_to "#{item.title}", url: item.image_url %> (<%=item.price%> €) x<%=item.join_table_item_orders.find_by(order_id: @order.id).quantity%></p>
+      <% if item.item_picture.attached? %>
+        <div class='index-card__illustration show-card__illustration'>
+          <%= image_tag item.item_picture, alt: 'image' %>
+        </div>
+      <% end %>
+      <br/>
     <% end %>
     <p>A bientôt sur Poticha.</p>
   </body>
