Après 75 essais, création d'une ébauche de footer stické en bas de page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@
 @import 'modules/buttons';
 
 @import 'layouts/navbar';
+@import 'layouts/footer';
 
 @import 'pages/items-index';
 @import 'pages/show-user';
