--- a/app/assets/stylesheets/layouts/_footer.scss
+++ b/app/assets/stylesheets/layouts/_footer.scss
@@ -9,7 +9,7 @@ body {
 
 .footer {
   background-color: $secondary;
-  padding: 1em;
+  padding: 1.5em;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -18,16 +18,42 @@ body {
   -moz-border-radius: 3em 3em 0 0;
   -ms-border-radius: 3em 3em 0 0;
   -o-border-radius: 3em 3em 0 0;
+  color: #fff;
 
   &__column__1 {
-    &--icons {
-      font-size: 1.6em;
+    
+    &--links {
       color: #fff;
       margin: 0 0.5em;
 
       &:hover {
         opacity: 0.7;
       }
+
+      &.icons {
+        font-size: 1.6em;
+      }
     }
+  }
+
+  &__column__2 {
+    margin: 1em 0;
+  }
+
+  &__column__3 {
+    font-size: 0.8em;
+
+    & i {
+      color: $danger;
+    }
+  }
+}
+
+
+@media screen and (max-width:575px) {
+  .footer__column__2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
