Better previous orders display (users#show)

--- a/app/assets/stylesheets/modules/_buttons.scss
+++ b/app/assets/stylesheets/modules/_buttons.scss
@@ -25,3 +25,11 @@
   text-align: center;
   background-color: $danger;
 }
+
+.info-btn {
+  font-size: 0.7em;
+  padding: 0.2rem;
+  text-align: center;
+  background-color: $gni;
+  display: inline;
+}
