--- a/app/assets/stylesheets/modules/_cards.scss
+++ b/app/assets/stylesheets/modules/_cards.scss
@@ -123,3 +123,21 @@
     font-size: 0.9em;
   }
 }
+
+// Card after payment success
+.payment-success {
+  margin-top: 1em;
+  padding: 0 1em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+
+  & h1 {
+    margin-bottom: 0.5em
+  }
+
+  & .btn {
+    max-width: 300px;
+  }
+}
