Added CSS for warning/notice/success flashes

--- a/app/assets/stylesheets/abstracts/_variables.scss
+++ b/app/assets/stylesheets/abstracts/_variables.scss
@@ -11,6 +11,7 @@ $violet: hsl(275, 25%, 54%);
 $spaceBlue: hsl(231, 13%, 20%);
 $gni: hsl(45, 16%, 20%);
 $danger: hsl(7, 71.6%, 42.7%);
+$success: hsl(144, 74%, 55%);
 
 $light-primary: hsl(201, 78%, 90%);
 $light-secondary: hsl(32, 45%, 90%);
