--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,7 @@
 @import 'modules/cards';
 @import 'modules/forms';
 @import 'modules/buttons';
+@import 'modules/flash';
 
 @import 'layouts/navbar';
 @import 'layouts/footer';
