--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,8 +1,8 @@
 <% flash.each do |type, msg| %>
-  <div class="text-center alert alert-<%=type %> alert-dismissable fade show" role="alert">
+  <div class="alert alert-<%=type %>" role="alert">
     <%= msg %>
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <%# <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span>
-    </button>
+    </button> %>
   </div>
 <% end %>
