centered flash text, removed 1 of the signup form errors

--- a/app/assets/stylesheets/modules/_flash.scss
+++ b/app/assets/stylesheets/modules/_flash.scss
@@ -5,6 +5,7 @@
   top: 80px;
   width: 100%;
   color: white;
+  text-align: center;
 
   &.alert-success, &.alert-notice {
     background-color: $success;
