Added admin panel link to navbar

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,7 @@
 <div class='show-user-container'>
   <div class='user-info'>
     <div class='user-info__infos'>
+      <h2>Mes informations personnelles</h2>
       <p class='user-first-name'>
         <span class='text-muted'>Prénom : </span>
         <% if @user.first_name && @user.first_name != '' %>
