--- a/app/assets/stylesheets/modules/_forms.scss
+++ b/app/assets/stylesheets/modules/_forms.scss
@@ -19,7 +19,7 @@
   -o-border-radius: 4px;
   box-shadow: 0 6px 12px 2px rgba(0,0,0,0.1);
 
-  & input[type="email"],& input[type="password"],& input[type="text"] {
+  & input[type="email"],& input[type="password"],& input[type="text"],& textarea, & input[type="number"], & input[type="file"] {
     border: 2px solid #9A98A2;
     outline: none;
     box-shadow: 0 4px 2px -2px rgba(0,0,0,0.1);
@@ -31,6 +31,14 @@
     width: 100%;
     padding: 0.5rem;
     margin: 0 0 1em 0;
+  }
+
+  & input[type="file"] {
+    background-color: white;
+  }
+
+  & textarea {
+    resize: none;
   }
 
   & input[type="email"]:focus,& input[type="password"]:focus,& input[type="text"]:focus {
