--- a/app/views/items/_item_card_show.html.erb
+++ b/app/views/items/_item_card_show.html.erb
@@ -3,7 +3,11 @@
 </div>
 <div class='show-card'>
   <div class='index-card__illustration show-card__illustration'>
-    <img src=<%= item.image_url %> alt='image'>
+    <% if item.item_picture.attached? %>
+        <%= image_tag item.item_picture, alt: 'image' %>
+      <%else%>
+        <img src=<%= item.image_url %> alt='image'>
+      <%end%>
   </div>
   <div class="show-card__body">
     <h2><%= item.title %></h2>
