--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,10 +8,9 @@
       <% if current_user.is_admin %>
         <%= link_to "Administration", admin_root_path, class: 'item' %>
       <% end %>
-      <%= link_to 'Mon Compte', user_path(current_user), class: 'item' %>
-       <%= link_to 'Mon Compte 2', myprofile_path, class: 'item' %>
+       <%= link_to 'Mon Compte', myprofile_path, class: 'item' %>
       <% if current_user.cart.items.count > 0 %>
-        <%= link_to "Mon Panier (#{current_user.cart.items.count})", cart_path(current_user.cart), class: 'item' %>
+        <%= link_to "Mon Panier (#{current_user.cart.items.count})", mycart_path, class: 'item' %>
       <% else %>
         <%= link_to 'Mon Panier', cart_path(current_user.cart), class: 'item' %>
       <% end %>
