add modify and destroy item for admin and views adjustments

--- a/app/views/admin/board/index.html.erb
+++ b/app/views/admin/board/index.html.erb
@@ -1,4 +1,8 @@
-<div class="container">
-  <h1 class="text-center mt-4">Bienvenue dans l'espace admin</h1>
-  <%= link_to  "Créer un nouvel item", new_admin_item_path %>
+<div>
+  <h1>Bienvenue dans l'espace admin</h1>
+  <ul>
+    <li><%= link_to  "Créer un nouvel item", new_admin_item_path %></li>
+    <li>Pour modifier un item : cliquez sur l'icone "modifier" située directement sur la <%= link_to 'liste des items', items_path %></li>
+    <li>Pour supprimer un item : cliquez sur l'icone "supprimer" située directement sur la <%= link_to 'liste des items', items_path %></li>
+  </ul>
 </div>
