--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Page test Show</h1>
+<h1>Page admin item#Show</h1>
 <div class='show-card'>
   <div class='index-card__illustration show-card__illustration'>
     <%= image_tag @item.item_picture, alt: 'image' %>
