--- a/app/views/items/_item_card.html.erb
+++ b/app/views/items/_item_card.html.erb
@@ -8,8 +8,8 @@
   </div>
   <div class='index-card__body'>
     <% if user_signed_in? && current_user.is_admin%>
-      <%= link_to raw("<i class='fa fa-edit'></i>"), edit_admin_item_path(item) %>
-      <%= link_to raw("<i class='fas fa-times delete'></i>"), admin_item_path(item), data: { confirm: "Hello admin, es-tu sûr de vouloir supprimer cet item?" }, method: "delete" %>
+      <%= link_to raw("<i class='fa fa-edit admin-btn edit'></i>"), edit_admin_item_path(item) %>
+      <%= link_to raw("<i class='fas fa-times admin-btn delete'></i>"), admin_item_path(item), data: { confirm: "Hello admin, es-tu sûr de vouloir supprimer cet item?" }, method: "delete" %>
     <% end %>
     <div class='index-card__info'>
       <h3 class='title'><%= item.title %></h3>
