--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,5 +23,6 @@
 
     <%= javascript_include_tag 'navbar' %>
     <script src="https://js.stripe.com/v3/"></script>
+    <script type="module" src="//unpkg.com/@grafikart/drop-files-element"></script>
   </body>
 </html>
