--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,9 +7,9 @@
     <% if user_signed_in? %>
       <%= link_to 'Mon Compte', user_path(current_user), class: 'item' %>
       <% if current_user.cart.items.count > 0 %>
-        <%= link_to "Mon Panier (#{current_user.cart.items.count})", cart_path(current_user.cart), class: 'item' %>
+        <%= link_to "Mon Panier (#{current_user.cart.items.count})", mon_chat_riot_path(id: current_user.cart.id), class: 'item' %>
       <% else %>
-        <%= link_to 'Mon Panier', cart_path(current_user.cart), class: 'item' %>
+        <%= link_to 'Mon Panier', mon_chat_riot_path(id: current_user.cart.id), class: 'item' %>
       <% end %>
       <%= link_to 'Me déconnecter', destroy_user_session_path, method: :delete, class: 'item' %>
     <% else %>
@@ -54,7 +54,7 @@
   <div class='dropdown-menu__items'>
     <% if user_signed_in? %>
       <%= link_to 'Mon Compte', user_path(current_user), class: 'item' %>
-      <%= link_to 'Mon Panier', cart_path(current_user.cart), class: 'item' %>
+      <%= link_to 'Mon Panier', mon_chat_riot_path(id: current_user.cart.id), class: 'item' %>
       <%= link_to 'Me déconnecter', destroy_user_session_path, method: :delete, class: 'item' %>
     <% else %>
       <%= link_to 'Me connecter', new_user_session_path, class: 'item' %>
