--- a/app/views/items/_item_card.html.erb
+++ b/app/views/items/_item_card.html.erb
@@ -9,6 +9,12 @@
   <div class='index-card__body'>
     <% if user_signed_in? && current_user.is_admin%>
       <%= link_to raw("<i class='fa fa-edit admin-btn edit'></i>"), edit_admin_item_path(item) %>
+      <% if item.sellable %>
+        <%= link_to raw("<i class='fas fa-eye-slash admin-btn mask'></i>"), mask_admin_items_path(item: item, unmask:false) %>
+      <% else %>
+        <%= link_to raw("<i class='fas fa-eye admin-btn mask'></i>"), mask_admin_items_path(item:item, unmask:true) %>
+      <% end %>
+
       <%= link_to raw("<i class='fas fa-times admin-btn delete'></i>"), admin_item_path(item), data: { confirm: "Hello admin, es-tu sûr de vouloir supprimer cet item?" }, method: "delete" %>
     <% end %>
     <div class='index-card__info'>
