Hide masked items to guests and regular users

--- a/app/assets/stylesheets/modules/_cards.scss
+++ b/app/assets/stylesheets/modules/_cards.scss
@@ -28,7 +28,7 @@
 
   &__body {
     & .admin-btn {
-      font-size: 1.6em;
+      font-size: 1.4em;
       position: absolute;
       top: 1em;
 
@@ -62,13 +62,34 @@
         -ms-transition: opacity 0.4s;
         -o-transition: opacity 0.4s;
         pointer-events: none;
-      }
+}
       
     }
 
+    & .masked {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background-color: #000;
+      opacity: 0.4;
+      border-radius: 48px;
+      -webkit-border-radius: 48px;
+      -moz-border-radius: 48px;
+      -ms-border-radius: 48px;
+      -o-border-radius: 48px;
+      pointer-events: none;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: white;
+      font-size: 2.5em;
+}
+
     & .delete {
       color: $danger;
-      right: 1em;
+      right: 0.5em;
 
       &:after {
         content: "Supprimer";        
@@ -77,10 +98,28 @@
 
     & .edit {
       color: $gni;
-      right: 2em;
+      right: 1.4em;
 
       &:after {
         content: "Éditer";        
+      }
+    }
+
+    & .mask {
+      color: $gni;
+      right: 2.9em;
+
+      &:after {
+        content: "Masquer";        
+      }
+    }
+
+    & .unmask {
+      color: $gni;
+      right: 2.9em;
+
+      &:after {
+        content: "Afficher";        
       }
     }
 
