--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -2,10 +2,12 @@
   <div class='herobar'><h1>Miaou</h1></div>
   <div class='items'>
     <% @items.each do |item| %>
-      <%= render(
-        partial: 'item_card',
-        locals: { item: item }
-      ) %>
+      <% if item.sellable || (user_signed_in? && current_user.is_admin)%>
+        <%= render(
+          partial: 'item_card',
+          locals: { item: item }
+        ) %>
+        <% end %>
     <% end %>
   </div>
 </div>
