--- a/app/views/items/_item_card.html.erb
+++ b/app/views/items/_item_card.html.erb
@@ -12,7 +12,8 @@
       <% if item.sellable %>
         <%= link_to raw("<i class='fas fa-eye-slash admin-btn mask'></i>"), mask_admin_items_path(item: item, unmask:false) %>
       <% else %>
-        <%= link_to raw("<i class='fas fa-eye admin-btn mask'></i>"), mask_admin_items_path(item:item, unmask:true) %>
+        <div class="masked">Masqué</div>
+        <%= link_to raw("<i class='fas fa-eye admin-btn unmask'></i>"), mask_admin_items_path(item:item, unmask:true) %>
       <% end %>
 
       <%= link_to raw("<i class='fas fa-times admin-btn delete'></i>"), admin_item_path(item), data: { confirm: "Hello admin, es-tu sûr de vouloir supprimer cet item?" }, method: "delete" %>
