--- a/app/views/myprofiles/show.html.erb
+++ b/app/views/myprofiles/show.html.erb
@@ -24,7 +24,7 @@
       </p>
     </div>
     <div class='user-info__edit'>
-      <%= link_to 'Editer mes informations', edit_user_path(@user), class: 'btn' %>
+      <%= link_to 'Editer mes informations', edit_myprofile_path, class: 'btn' %>
     </div>
   </div>
   <div class='previous-orders'>
