--- a/app/views/checkout/cancel.html.erb
+++ b/app/views/checkout/cancel.html.erb
@@ -1,1 +1,7 @@
-<div style="width:100%;height:0;padding-bottom:56%;position:relative;"><iframe src="https://giphy.com/embed/hWReBira2xhgDvVFMU" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/mer-nik-nique-ta-mre-hWReBira2xhgDvVFMU">via GIPHY</a></p>
+<div class="payment-success">
+  <h1>Erreur de paiement</h1>
+  <p>Le paiement n'a pas été effectué.</p>
+  <p>Nous vous invitons à réessayer ultérieurement.</p>
+  <%= link_to "Mon Panier", mycart_path, class: 'btn' %>
+  <%= link_to "Revenir à l'accueil", root_path, class: 'btn' %>
+</div>
