--- a/app/views/items/_item_card_recommendations.html.erb
+++ b/app/views/items/_item_card_recommendations.html.erb
@@ -2,7 +2,7 @@
 <div class="recommendations-container">
 
   <div class='show-card smaller'>
-    <% item = Item.where.not(id: @item.id).first %>
+    <% item = Item.where.not(id: @item.id, sellable:false).first %>
     <div class='index-card__illustration show-card__illustration'>
       <% if item.item_picture.attached? %>
           <%= image_tag item.item_picture, alt: 'image' %>
